fix overflow bug

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -18,6 +18,7 @@
 body {
   color: white;
   background-color: #000535;
+  overflow-x: hidden;
 }
 
 h1, h2, h3 {
