--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -4,6 +4,7 @@ section.projects {
   img.patternProjects {
     height: 1000px;
     position: absolute;
+    max-width: 1000px;
     right: 0;
     z-index: -1;
   }
